docs: add Prometheus metrics to stress test — JVM threads, HTTP counts, Hikari pool, GC pauses
config-service GC pause is 5.10s total (highest), directly correlating
with its worst-in-platform stress test performance. Hikari pool NOT the
bottleneck (all idle at rest). Gateway-service has 112 threads (highest).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>